--- a/stream-three.html
+++ b/stream-three.html
@@ -7,7 +7,14 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <nav>
+        <ul>
+            <li><a href="stream-one.html">Stream One</a></li>
+            <li><a href="stream-two.html">Stream Two</a></li>
+            <li><a href="stream-three.html">Stream Three</a></li>
+        </ul>
+    </nav>
+    <h1>Stream Three</h1>
     <p>This project was written in gitpod</p>
 </body>
 </html>
